name:                server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/server#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Api
                     , Models
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , monad-logger
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , servant
                     , servant-server
                     , servant-auth
                     , servant-auth-server
                     , string-conversions
                     , text
                     , transformers
                     , wai
                     , wai-cors
                     , warp
  default-language:    Haskell2010

executable server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , monad-logger
                     , persistent
                     , server
                     , persistent-sqlite
                     , servant
                     , servant-server
                     , string-conversions
                     , text
                     , transformers
                     , wai
                     , warp
  default-language:    Haskell2010

test-suite server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , aeson
                     , persistent
                     , monad-logger
                     , persistent-template
                     , persistent-sqlite
                     , transformers
                     , wai
                     , servant
                     , servant-client
                     , servant-server
                     , string-conversions
                     , warp
                     , http-client
                     , text
                     , mockery
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/server
